--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="src/assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
     <title>ChrisFolio</title>
@@ -71,7 +71,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="src/assets/profile.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -94,7 +94,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
+                  href="src/assets/resume.pdf"
                 >
                   View Resume
                 </a>
@@ -155,7 +155,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project1.jpg"
+                      src="src/assets/project1.jpg"
                     />
                   </div>
                 </a>
@@ -207,7 +207,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project2.jpg"
+                      src="src/assets/project2.jpg"
                     />
                   </div>
                 </a>
@@ -259,7 +259,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project3.jpg"
+                      src="src/assets/project3.jpg"
                     />
                   </div>
                 </a>
@@ -311,6 +311,6 @@
     </footer>
     <!-- /END Footer Section -->
 
-    <script defer type="module" src="index.js"></script>
+    <script defer type="module" src="src/index.js"></script>
   </body>
 </html>
