--- a/src/index.html
+++ b/src/index.html
@@ -79,15 +79,18 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I’ve graduated in computer science and I have just 5 months of experience as a React developer. 
-                In my past years in this industry, I've honed my analytical thinking, problem-solving and collaboration skills. 
-                I love trying new things, learning new technology methods, and introducing new ideas. 
+                I graduated in computer science and I have 2 years of experience
+                as a React developer and 5 years of experience as a software
+                engineer. In my past years in this industry, I've honed my
+                analytical thinking, problem-solving and collaboration skills. I
+                love trying new things, learning new technology methods, and
+                introducing new ideas.
               </p>
               <p class="about-wrapper__info-text">
-                Before two years, I have been chosen as the key person to launch a big marketplace App in Greece. 
-                I have built a similar website in the past and we shared the same vision with the company Founders. 
-                It was a great journey in the sales industry, which help me a lot to improve my soft skills. 
-                After all, I realized that programming is what I love and makes me happy. I started learning new things and aiming to master React.js. 
+                Before three years, I have been chosen as the key person to
+                launch a big marketplace App in Greece. It was a great journey
+                in the sales industry, which help me a lot to improve my soft
+                skills.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -110,7 +113,7 @@
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">React Projects</h2>
+          <h2 class="section-title dark-blue-text">React Dummy Projects</h2>
 
           <!-- Notice: each .row is a project -->
           <div class="row">
@@ -119,9 +122,9 @@
                 <h3 class="project-wrapper__text-title">Clothing E-shop</h3>
                 <div>
                   <p class="mb-4">
-                    Clothing is an application built on React.js. 
-                    This is an E-commerce application similar to Shopify 
-                    using React, Redux, React Router, Firebase, Stripe and more. 
+                    Clothing is an application built on React.js. This is an
+                    E-commerce application similar to Shopify using React,
+                    Redux, React Router, Firebase, Stripe and more.
                   </p>
                 </div>
                 <a
@@ -171,9 +174,9 @@
                 <h3 class="project-wrapper__text-title">Face Recognition</h3>
                 <div>
                   <p class="mb-4">
-                    Facerecognition is an application built on React.js. 
-                    The App uses sign-in and register components. 
-                    Also, it connects with Clarifai API, which recognizes faces on images.
+                    Facerecognition is an application built on React.js. The App
+                    uses sign-in and register components. Also, it connects with
+                    Clarifai API, which recognizes faces on images.
                   </p>
                 </div>
                 <a
@@ -223,9 +226,9 @@
                 <h3 class="project-wrapper__text-title">RoboPeople</h3>
                 <div>
                   <p class="mb-4">
-                    RoboPeople is a simple application built on React.js. 
-                    It is a responsive website with a nice search feature
-                    and is fetching robots from a test URL.
+                    RoboPeople is a simple application built on React.js. It is
+                    a responsive website with a nice search feature and is
+                    fetching robots from a test URL.
                   </p>
                 </div>
                 <a
@@ -297,16 +300,23 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="https://www.linkedin.com/in/christos-bantogias-313740191/" target="_blank">
+          <a
+            rel="noreferrer"
+            href="https://www.linkedin.com/in/christos-bantogias-313740191/"
+            target="_blank"
+          >
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="https://github.com/mpantogi" target="_blank">
+          <a
+            rel="noreferrer"
+            href="https://github.com/mpantogi"
+            target="_blank"
+          >
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
 
         <hr />
-
       </div>
     </footer>
     <!-- /END Footer Section -->
