--- a/src/index.html
+++ b/src/index.html
@@ -89,8 +89,8 @@
               <p class="about-wrapper__info-text">
                 Before three years, I have been chosen as the key person to
                 launch a big marketplace App in Greece. It was a great journey
-                in the sales industry, which help me a lot to improve my soft
-                skills.
+                in the sales industry for a while, which help me a lot to
+                improve my soft skills and fully understand clients needs.
               </p>
               <span class="d-flex mt-3">
                 <a
