Update summary info and resume

--- a/src/index.html
+++ b/src/index.html
@@ -79,18 +79,13 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I graduated in computer science and I have 2 years of experience
-                as a React developer and 5 years of experience as a software
-                engineer. In my past years in this industry, I've honed my
-                analytical thinking, problem-solving and collaboration skills. I
-                love trying new things, learning new technology methods, and
-                introducing new ideas.
+                I am a computer science graduate with a passion for software engineering, backed by 5 years of industry experience. Throughout my career, I have dedicated myself to refining my analytical thinking, problem-solving abilities, and collaboration skills. Embracing a mindset of continuous growth, I thrive on exploring new technologies, methodologies, and innovative ideas.
               </p>
               <p class="about-wrapper__info-text">
-                Before three years, I have been chosen as the key person to
-                launch a big marketplace App in Greece. It was a great journey
-                in the sales industry for a while, which help me a lot to
-                improve my soft skills and fully understand clients needs.
+                Notably, three years ago, I was entrusted with a pivotal role in launching a prominent marketplace app in Greece. This experience provided me with a profound understanding of the sales industry and allowed me to greatly enhance my soft skills. By closely engaging with clients, I developed a keen ability to discern and fulfill their unique needs.
+              </p>
+              <p class="about-wrapper__info-text">
+                In summary, I am a driven professional who combines technical expertise with a deep understanding of client-centric approaches. With a relentless pursuit of excellence, I am eager to contribute my skills and knowledge to meaningful projects, ensuring impactful outcomes for both users and stakeholders.
               </p>
               <span class="d-flex mt-3">
                 <a
