--- a/src/index.html
+++ b/src/index.html
@@ -79,14 +79,12 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I am a computer science graduate with a passion for software engineering, backed by 5 years of industry experience. Throughout my career, I have dedicated myself to refining my analytical thinking, problem-solving abilities, and collaboration skills. Embracing a mindset of continuous growth, I thrive on exploring new technologies, methodologies, and innovative ideas.
+                I am a computer science graduate with 5 years of experience as a software engineer. Throughout my career, I have honed my analytical thinking, problem-solving, and collaboration skills. I have a passion for learning new technologies and introducing innovative ideas. Notably, I played a key role in launching a major marketplace app in Greece, which allowed me to develop strong sales industry insights and improve my soft skills in understanding client needs.
               </p>
               <p class="about-wrapper__info-text">
-                Notably, three years ago, I was entrusted with a pivotal role in launching a prominent marketplace app in Greece. This experience provided me with a profound understanding of the sales industry and allowed me to greatly enhance my soft skills. By closely engaging with clients, I developed a keen ability to discern and fulfill their unique needs.
+                In summary, I am a highly motivated professional with expertise in software engineering. I have a track record of success in delivering impactful solutions and collaborating effectively with cross-functional teams. With a focus on continuous growth and a drive to stay at the forefront of technological advancements, I am eager to contribute my skills and knowledge to drive positive outcomes for future projects.
               </p>
-              <p class="about-wrapper__info-text">
-                In summary, I am a driven professional who combines technical expertise with a deep understanding of client-centric approaches. With a relentless pursuit of excellence, I am eager to contribute my skills and knowledge to meaningful projects, ensuring impactful outcomes for both users and stakeholders.
-              </p>
+              
               <span class="d-flex mt-3">
                 <a
                   rel="noreferrer"
