--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
     <link rel="stylesheet" href="styles.scss" />
     <script
@@ -79,12 +79,25 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I am a computer science graduate with 5 years of experience as a software engineer. Throughout my career, I have honed my analytical thinking, problem-solving, and collaboration skills. I have a passion for learning new technologies and introducing innovative ideas. Notably, I played a key role in launching a major marketplace app in Greece, which allowed me to develop strong sales industry insights and improve my soft skills in understanding client needs.
+                I am a computer science graduate with 5 years of experience as a
+                software engineer. Throughout my career, I have honed my
+                analytical thinking, problem-solving, and collaboration skills.
+                I have a passion for learning new technologies and introducing
+                innovative ideas. Notably, I played a key role in launching a
+                major marketplace app in Greece, which allowed me to develop
+                strong sales industry insights and improve my soft skills in
+                understanding client needs.
               </p>
               <p class="about-wrapper__info-text">
-                In summary, I am a highly motivated professional with expertise in software engineering. I have a track record of success in delivering impactful solutions and collaborating effectively with cross-functional teams. With a focus on continuous growth and a drive to stay at the forefront of technological advancements, I am eager to contribute my skills and knowledge to drive positive outcomes for future projects.
+                In summary, I am a highly motivated professional with expertise
+                in software engineering. I have a track record of success in
+                delivering impactful solutions and collaborating effectively
+                with cross-functional teams. With a focus on continuous growth
+                and a drive to stay at the forefront of technological
+                advancements, I am eager to contribute my skills and knowledge
+                to drive positive outcomes for future projects.
               </p>
-              
+
               <span class="d-flex mt-3">
                 <a
                   rel="noreferrer"
@@ -298,14 +311,18 @@
             href="https://www.linkedin.com/in/christos-bantogias-313740191/"
             target="_blank"
           >
-            <i class="fa fa-linkedin fa-inverse"></i>
+            <i class="fab fa-linkedin"></i>
           </a>
           <a
             rel="noreferrer"
             href="https://github.com/mpantogi"
             target="_blank"
           >
-            <i class="fa fa-github fa-inverse"></i>
+            <i class="fab fa-github"></i>
+          </a>
+          <a rel="noreferrer">
+            <i class="fab fa-discord"></i>
+            <span>@mpantogi</span>
           </a>
         </div>
 
