--- a/src/index.html
+++ b/src/index.html
@@ -79,23 +79,25 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I am a computer science graduate with 5 years of experience as a
-                software engineer. Throughout my career, I have honed my
-                analytical thinking, problem-solving, and collaboration skills.
-                I have a passion for learning new technologies and introducing
-                innovative ideas. Notably, I played a key role in launching a
-                major marketplace app in Greece, which allowed me to develop
-                strong sales industry insights and improve my soft skills in
-                understanding client needs.
+                Over the past decade, I have been deeply immersed in the realms
+                of Web 2.0 and Web 3.0, developing innovative solutions as a
+                software engineer and web app developer. My journey has
+                encompassed working on major e-commerce platforms, healthcare
+                applications, and recently, creating a decentralized exchange
+                (DEX) trading platform in the DeFi sector. I have taken on key
+                roles and leadership positions, collaborating with international
+                teams and clients across Europe and beyond.
               </p>
               <p class="about-wrapper__info-text">
-                In summary, I am a highly motivated professional with expertise
-                in software engineering. I have a track record of success in
-                delivering impactful solutions and collaborating effectively
-                with cross-functional teams. With a focus on continuous growth
-                and a drive to stay at the forefront of technological
-                advancements, I am eager to contribute my skills and knowledge
-                to drive positive outcomes for future projects.
+                As a highly motivated professional, I excel in delivering
+                impactful solutions and leading cross-functional teams. I have
+                continuously honed my analytical thinking, problem-solving, and
+                collaboration skills. I am particularly skilled at understanding
+                and anticipating client needs, enabling me to deliver
+                user-centric solutions. With a focus on continuous growth and
+                staying at the forefront of technological advancements, I am
+                eager to leverage my expertise in both Web 2.0 and Web 3.0 to
+                drive positive outcomes for future projects.
               </p>
 
               <span class="d-flex mt-3">
@@ -119,163 +121,259 @@
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">React Dummy Projects</h2>
+          <h2 class="section-title dark-blue-text">Project Portfolio</h2>
 
-          <!-- Notice: each .row is a project -->
+          <!-- CyberDex Project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Clothing E-shop</h3>
+                <h3 class="project-wrapper__text-title">CyberDex</h3>
                 <div>
                   <p class="mb-4">
-                    Clothing is an application built on React.js. This is an
-                    E-commerce application similar to Shopify using React,
-                    Redux, React Router, Firebase, Stripe and more.
+                    A decentralized exchange platform implemented with Next.js
+                    and ethers.js. It utilizes the Synthetix protocol to
+                    facilitate the trading of synthetic assets.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://bantogias-crwn-live.herokuapp.com/"
+                  href="https://www.cyberdex.xyz/"
                 >
                   See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="https://github.com/mpantogi/clothing"
-                >
-                  Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
+                <a
+                  rel="noreferrer"
+                  href="https://www.cyberdex.xyz/"
+                  target="_blank"
+                >
+                  <div class="thumbnail rounded js-tilt">
                     <img
-                      alt="Project Image"
+                      alt="CyberDex Project Image"
                       class="img-fluid"
-                      src="assets/project1.jpg"
+                      src="assets/cyberdex.jpg"
                     />
                   </div>
                 </a>
               </div>
             </div>
           </div>
-          <!-- /END Project -->
+          <!-- /END CyberDex Project -->
 
-          <!-- Notice: each .row is a project -->
+          <!-- Orderchamp Project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Face Recognition</h3>
+                <h3 class="project-wrapper__text-title">Orderchamp</h3>
                 <div>
                   <p class="mb-4">
-                    Facerecognition is an application built on React.js. The App
-                    uses sign-in and register components. Also, it connects with
-                    Clarifai API, which recognizes faces on images.
+                    A B2B e-commerce marketplace built with Nuxt.js, offering a
+                    scalable platform for connecting retailers and brands.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://face-recognition-bantogias.herokuapp.com/"
+                  href="https://www.orderchamp.com/"
                 >
                   See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="https://github.com/mpantogi/facerecognition"
-                >
-                  Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
+                <a
+                  rel="noreferrer"
+                  href="https://www.orderchamp.com/"
+                  target="_blank"
+                >
+                  <div class="thumbnail rounded js-tilt">
                     <img
-                      alt="Project Image"
+                      alt="Orderchamp Project Image"
                       class="img-fluid"
-                      src="assets/project2.jpg"
+                      src="assets/orderchamp.jpg"
                     />
                   </div>
                 </a>
               </div>
             </div>
           </div>
-          <!-- /END Project -->
+          <!-- /END Orderchamp Project -->
 
-          <!-- Notice: each .row is a project -->
+          <!-- VITALISE Project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">RoboPeople</h3>
+                <h3 class="project-wrapper__text-title">Vitalise</h3>
                 <div>
                   <p class="mb-4">
-                    RoboPeople is a simple application built on React.js. It is
-                    a responsive website with a nice search feature and is
-                    fetching robots from a test URL.
+                    An EU-funded project using Node.js and React to create a
+                    virtual infrastructure for health and wellbeing research. It
+                    provides access to datasets and research infrastructures
+                    across Europe.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://mpantogi.github.io/robopeople/"
+                  href="https://vitalise-project.eu/"
                 >
                   See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="https://github.com/mpantogi/robopeople"
-                >
-                  Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
+                <a
+                  rel="noreferrer"
+                  href="https://vitalise-project.eu/"
+                  target="_blank"
+                >
+                  <div class="thumbnail rounded js-tilt">
                     <img
-                      alt="Project Image"
+                      alt="VITALISE Project Image"
                       class="img-fluid"
-                      src="assets/project3.jpg"
+                      src="assets/vitalise.jpg"
                     />
                   </div>
                 </a>
               </div>
             </div>
           </div>
-          <!-- /END Project -->
+          <!-- /END VITALISE Project -->
+
+          <!-- Lifebit Project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Lifebit</h3>
+                <div>
+                  <p class="mb-4">
+                    A platform for genomic data analysis built with Next.js. It
+                    provides tools for data visualization, real-time
+                    collaboration, and custom analysis pipelines.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://www.lifebit.ai/"
+                >
+                  See Live
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://www.lifebit.ai/"
+                  target="_blank"
+                >
+                  <div class="thumbnail rounded js-tilt">
+                    <img
+                      alt="Lifebit Project Image"
+                      class="img-fluid"
+                      src="assets/lifebit.jpg"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Lifebit Project -->
+
+          <!-- Le Livre Ouvert Project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Le Livre Ouvert</h3>
+                <div>
+                  <p class="mb-4">
+                    An online bookstore built with React, offering a vast
+                    collection of books with features like personalized
+                    recommendations and user reviews.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://lelivreouvert.gr/"
+                >
+                  See Live
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://lelivreouvert.gr/"
+                  target="_blank"
+                >
+                  <div class="thumbnail rounded js-tilt">
+                    <img
+                      alt="Le Livre Ouvert Project Image"
+                      class="img-fluid"
+                      src="assets/lelivreouvert.jpg"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Le Livre Ouvert Project -->
+
+          <!-- InstaShop Project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">InstaShop</h3>
+                <div>
+                  <p class="mb-4">
+                    A fast delivery online shopping platform where I contributed
+                    as part of the team, focusing on expanding the project's
+                    capabilities.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://instashop.com/"
+                >
+                  See Live
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://instashop.com/"
+                  target="_blank"
+                >
+                  <div class="thumbnail rounded js-tilt">
+                    <img
+                      alt="InstaShop Project Image"
+                      class="img-fluid"
+                      src="assets/instashop.jpg"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END InstaShop Project -->
         </div>
       </div>
     </section>
