remove res button

--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
                 drive positive outcomes for future projects.
               </p>
 
-              <span class="d-flex mt-3">
+              <!-- <span class="d-flex mt-3">
                 <a
                   rel="noreferrer"
                   target="_blank"
@@ -109,7 +109,7 @@
                 >
                   View Resume
                 </a>
-              </span>
+              </span> -->
             </div>
           </div>
         </div>
